@@ -3,43 +3,80 @@ package ca.mcgill.sis.dmas.kam1n0.app;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.concurrent.TimeUnit;
 
-import org.openqa.selenium.JavascriptExecutor;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebDriverException;
-import org.openqa.selenium.WebElement;
+import org.apache.commons.io.FileUtils;
+import org.openqa.selenium.*;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import ca.mcgill.sis.dmas.env.StringResources;
-import ca.mcgill.sis.dmas.kam1n0.impl.disassembly.DisassemblyFactoryIDA;
+
+import static org.springframework.util.FileSystemUtils.deleteRecursively;
 
 public class UITestUtils {
 	private static Process appProcess;
+	private static File tempDirectory;
 
 	public static void log(String msg, Object... args) {
 		System.out.println(StringResources
 				.parse(UITest.class.getSimpleName() + " " + StringResources.timeString() + " " + msg, args));
 	}
 
-	public static void StartServer() throws Exception {
-		File dataPath = Files.createTempDirectory("Kam1n0-TESTING-" + StringResources.timeString()).toFile();
-		dataPath.deleteOnExit();
-		log("Starting server on {}", dataPath.getAbsolutePath());
+	public static void debugWithExistingServer(String dataDirectory) throws Exception {
+		appProcess = null;
+		tempDirectory = new File(dataDirectory);
+		log("Debugging using server already running on {}", tempDirectory.getAbsolutePath());
+	}
+
+	public static void startServer() throws Exception {
+		tempDirectory = Files.createTempDirectory("Kam1n0-TESTING-" + StringResources.timeString()).toFile();
+		log("Starting server on {}", tempDirectory.getAbsolutePath());
 		ProcessBuilder builder = new ProcessBuilder();
 		String binLocation = System.getProperty("output.dir");
 		log("Bin directory is on {}", binLocation);
-		appProcess = builder.command("java", "-Xmx6G", "-Xss4m", "-Dkam1n0.ansi.enable=false",
-				"-Dkam1n0.spring.popup=false", "-Dlogging.level.org.springframework=INFO", "-jar",
-				binLocation + "/kam1n0-server.jar", "--start", "kam1n0.data.path", dataPath.getAbsolutePath())
+		appProcess = builder.command("java",
+				"-Xmx6G",
+				"-Xss4m",
+				"\"-Dkam1n0.ansi.enable=false\"",
+				"\"-Dkam1n0.spring.popup=false\"",
+				"\"-Dlogging.level.org.springframework=INFO\"",
+				"\"-Djdk.attach.allowAttachSelf=true\"",
+				"--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+				"--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+				"--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+				"--add-exports=java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED",
+				"--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED",
+				"--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED",
+				"--add-exports=java.sql/java.sql=ALL-UNNAMED",
+				"--add-opens=java.base/java.lang.module=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.math=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.module=ALL-UNNAMED",
+				"--add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED",
+				"--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+				"-jar",	binLocation + "kam1n0-server.jar",
+				"--start", "kam1n0.data.path", tempDirectory.getAbsolutePath())
 				.inheritIO().start();
 	}
 
 	public static void cleanUp() throws Exception {
-		log("Cleaning up...");
-		if (appProcess != null)
-			appProcess.destroyForcibly();
+		log("UITestUtils Start Cleaning up...");
+		if (appProcess != null) {
+			appProcess.destroy();
+			if (appProcess.isAlive())
+				appProcess.destroyForcibly();
 
+			TimeUnit.SECONDS.sleep(5);
+			deleteRecursively(tempDirectory);
+		} else {
+			log("Was debugging using a server already running on {}", tempDirectory.getAbsolutePath());
+			log("Files were NOT deleted as server might still be running.");
+		}
+
+		log("UITestUtils Cleaning up End.");
 	}
 	
 
@@ -80,4 +117,13 @@ public class UITestUtils {
 		wait.until(ExpectedConditions.stalenessOf(input));
 	}
 
+	public static void takeScreenshot(String pathname, WebDriver driver) throws IOException {
+		File src = ((TakesScreenshot) driver).getScreenshotAs(OutputType.FILE);
+		FileUtils.copyFile(src, new File(pathname));
+	}
+
+	public static void deleteTempFiles() {
+		String tempFilesDirectory = tempDirectory.getAbsolutePath() + "\\tmp\\admin\\";
+		deleteRecursively(new File(tempFilesDirectory));
+	}
 }
